--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -1,12 +1,12 @@
 <div
-    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll bg-card dark:bg-transparent"
+    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-hidden bg-card dark:bg-transparent"
     [formGroup]="customerForm">
-    <div class="heading">Loan Utilization
+    <div class="heading mt-3">Loan Utilization
     </div>
 
 
     <!-- Header -->
-    <div class="flex flex-auto mt-2  px-0" style="flex-direction: column; ">
+    <div class="flex flex-auto mt-2  px-0 overflow-y-scroll overflow-x-hidden" style="flex-direction: column; ">
         <div>
 
 
@@ -82,15 +82,15 @@
 
 
         </div>
-        <div class="col-lg-12 py-2 tab-box">
+        <div class="col-lg-12 pt-2 tab-box">
 
             <div class="heading">Loan Application
             </div>
-            <mat-tab-group mat-align-tabs="start">
+            <mat-tab-group class="mt-1" mat-align-tabs="start">
 
                 <!-- Applicants -->
                 <mat-tab label="Applicants" class="px-0">
-                    <div *ngIf="LoanApplicants" class="table-responsive px-0">
+                    <div *ngIf="LoanApplicants" class="table-responsive px-0  border shadow-xs rounded-sm bg-gray-50">
                         <table class="table table-striped">
                             <thead>
                             <tr class="table-header-background">
@@ -190,7 +190,7 @@
         <!-- images -->
         <div class="kt-portlet__head kt-portlet__head__custom" style="width: 100%">
             <div class="kt-portlet__head-label">
-                <div class="heading">Attach Images
+                <div class="sub-heading">Attach Images
                 </div>
                 <mat-error *ngIf="hasError('file', 'required')">Must Contain a Image<strong>required</strong>
                 </mat-error>
@@ -235,7 +235,7 @@
         <!--        Video-->
         <div class="kt-portlet__head kt-portlet__head__custom">
             <div class="kt-portlet__head-label">
-                <div class="heading mb-2">Attach Videos
+                <div class="sub-heading mb-2">Attach Videos
                 </div>
                 <mat-error *ngIf="hasError('fileV', 'required')">Must Contain a Video<strong>required</strong>
                 </mat-error>
@@ -300,36 +300,36 @@
                 </mat-form-field>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 text-right">
-                <div class="float-right mr-4 mt-2 border-t py-6">
-                    <button class="ml-2 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary"
-                            *ngIf="isSave" mat-raised-button (click)="save()">
-                        <mat-icon class="mr-2">save</mat-icon>
-                        Save
-                    </button>
-                    <button class="ml-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
-                            *ngIf="isSubmit" mat-raised-button color="primary" (click)="changeStatus('S')">
-                        <mat-icon class="mr-2">check_circle</mat-icon>
-                        Submit
-                    </button>
-                    <button class="ml-2" *ngIf="isReffer" mat-raised-button color="primary" (click)="changeStatus('R')">
-                        Reffer
-                        Back
-                    </button>
-                    <button class="ml-2" *ngIf="isAuthorize" mat-raised-button color="primary"
-                            (click)="changeStatus('A')">
-                        Authorize
-                    </button>
-                    <button *ngIf="isDelete" class="ml-2 bg-danger" mat-raised-button color="primary"
-                            (click)="changeStatus('C')">
-                        <mat-icon class="mr-2 ">delete_forever</mat-icon>
-                        Delete
-                    </button>
-                </div>
+
+    </div>
+    <div class="row">
+        <div class="col-lg-12 text-right">
+            <div class="float-right mr-4 mt-2 border-t py-2">
+                <button class="ml-2 bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                        *ngIf="isSave" mat-raised-button (click)="save()">
+                    <mat-icon class="mr-2">save</mat-icon>
+                    Save
+                </button>
+                <button class="ml-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                        *ngIf="isSubmit" mat-raised-button color="primary" (click)="changeStatus('S')">
+                    <mat-icon class="mr-2">check_circle</mat-icon>
+                    Submit
+                </button>
+                <button class="ml-2" *ngIf="isReffer" mat-raised-button color="primary" (click)="changeStatus('R')">
+                    Reffer
+                    Back
+                </button>
+                <button class="ml-2" *ngIf="isAuthorize" mat-raised-button color="primary"
+                        (click)="changeStatus('A')">
+                    Authorize
+                </button>
+                <button *ngIf="isDelete" class="ml-2 bg-danger" mat-raised-button color="primary"
+                        (click)="changeStatus('C')">
+                    <mat-icon class="mr-2 ">delete_forever</mat-icon>
+                    Delete
+                </button>
             </div>
         </div>
     </div>
-
 
 </div>
