--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -64,3 +64,22 @@
     overflow: hidden;
   }
 }
+
+.dash-tab{
+
+.mat-tab-labels{
+.mat-tab-label-active{
+  display: none;
+}
+}
+
+}
+.mat-tab-label-active{
+  height: 31px !important;
+    width: 100%;
+}
+.mat-tab-label{
+  height: 31px !important;
+  width: 100%;
+  border:1px solid #01671B;
+}
