--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,13 +1,14 @@
 <div
     class=" px-10   sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
 
-    <mat-tab-group class="pt-4 flex flex-auto  shadow-xs rounded-sm" style="flex-direction: column; overflow-y: scroll"
+    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}" class="pt-4 flex  flex-auto  shadow-xs rounded-sm" style="flex-direction: column; overflow-y: scroll"
                    animationDuration="200ms" style="background-color: white;">
         <ng-container *ngFor="let item of userGroup">
 
-            <mat-tab *ngIf="item.ProfileID=='56'" ng-disable="visibleFlag" label="MCO">
+            <mat-tab   *ngIf=" item.ProfileID=='56'" ng-disable="visibleFlag" label="MCO">
                 <app-mco-dashborad></app-mco-dashborad>
             </mat-tab>
+
             <mat-tab *ngIf="item.ProfileID=='206'" label="Recovery Officer">
                 <app-recovery-officer-dashboard></app-recovery-officer-dashboard>
             </mat-tab>
