--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div
     class=" px-10   sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
 
-    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}" class="pt-4 flex  flex-auto  shadow-xs rounded-sm" style="flex-direction: column; overflow-y: scroll"
+    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}" class="pt-4 flex  flex-auto  shadow-xs rounded-sm pb-3" style="flex-direction: column; overflow-y: scroll"
                    animationDuration="200ms" style="background-color: white;">
         <ng-container *ngFor="let item of userGroup">
 
