--- a/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
+++ b/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
@@ -1,5 +1,5 @@
 <div
-    class=" pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Regional Cheif</div>
     <!-- Header -->
 
