--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -2,7 +2,7 @@
     class=" pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Branch Manager</div>
     <!-- Header -->
-    <form [formGroup]="options">
+    <!-- <form [formGroup]="options">
         <div class="row py-2">
 
             <div class="col-lg-4">
@@ -28,7 +28,7 @@
             </div>
 
         </div>
-    </form>
+    </form> -->
     <!-- Main -->
     <div class="flex flex-auto overflow-y-scroll">
 
