--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading ">EVP (Credit Division)</div>
-    <div>
+    <!-- <div>
         <form [formGroup]="options">
             <div class="row pt-2">
                 <div class="col-lg-4">
@@ -28,7 +28,7 @@
 
 
         </form>
-    </div>
+    </div> -->
     <!-- Main -->
     <div class="flex flex-auto overflow-x-hidden overflow-y-scroll">
 
