--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -2,7 +2,7 @@
     class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">EVP(Operation Division)</div>
     <!-- Header -->
-    <div class="example-container">
+    <!-- <div class="example-container">
         <form [formGroup]="options">
             <div class="row pt-2">
                 <div class="col-lg-4 pl-0">
@@ -17,7 +17,7 @@
             </div>
 
         </form>
-    </div>
+    </div> -->
     <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
 
         <!-- Products list -->
