--- a/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
+++ b/src/app/modules/reports/get-customer-legal-heirs/get-customer-legal-heirs.component.html
@@ -11,7 +11,7 @@
 >
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Get Customer Legal Heirs</div>
+            <div class="heading">Customer Legal Heirs</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
@@ -87,7 +87,7 @@
             >
                 <ng-container matColumnDef="Cnic">
                     <mat-header-cell *matHeaderCellDef
-                    >Cnic
+                    >CNIC
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
