--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -88,6 +88,16 @@
                 matSortDirection="asc"
                 matSortDisableClear
             >
+                <ng-container matColumnDef="GL">
+                    <mat-header-cell *matHeaderCellDef
+                    >GL Code
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.GlCode
+                        }}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="Zone">
                     <mat-header-cell *matHeaderCellDef
                     >Zone Name
@@ -118,19 +128,9 @@
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Dob">
-                    <mat-header-cell *matHeaderCellDef
-                    >Date of Birth
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.DOB
-                        }}</mat-cell>
-                </ng-container>
-
                 <ng-container matColumnDef="Ndd">
                     <mat-header-cell *matHeaderCellDef
-                    >Next Due Date
+                    >Due Date
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
@@ -138,16 +138,25 @@
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="MajorBorrower">
+                <ng-container matColumnDef="PD">
                     <mat-header-cell *matHeaderCellDef
-                    >Major Borrower
+                    >Past Date
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.MajorBorrower
+                        report.PastDueAmount
                         }}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="CD">
+                    <mat-header-cell *matHeaderCellDef
+                    >Current Due
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.CurrentDueAmount
+                        }}</mat-cell>
+                </ng-container>
 
                 <ng-container matColumnDef="Lcno">
                     <mat-header-cell *matHeaderCellDef
@@ -163,6 +172,16 @@
                     <mat-header-cell style="min-width: 120px;" *matHeaderCellDef>CNIC</mat-header-cell>
                     <mat-cell style="min-width: 120px;" *matCellDef="let report">{{
                         report.Cnic
+                        }}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="Caste">
+                    <mat-header-cell *matHeaderCellDef
+                    >Caste
+                    </mat-header-cell
+                    >
+                    <mat-cell *matCellDef="let report">{{
+                        report.Cast
                         }}</mat-cell>
                 </ng-container>
 
