--- a/src/app/modules/reports/payment-behavior/payment-behavior.component.html
+++ b/src/app/modules/reports/payment-behavior/payment-behavior.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-12 col-sm-12">
-            <div class="heading">Payment Behavior
+            <div class="heading">Re-Payment Behavior
             </div>
         </div>
     </div>
