--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -154,7 +154,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Payment Behavior</p>
+                    >Re-Payment Behavior</p>
                 </div>
             </mat-card>
         </div>
@@ -210,7 +210,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class=" text-black"
-                    >Insurance Report</p>
+                    >Insurance Premimum Report</p>
                 </div>
             </mat-card>
         </div>
@@ -248,7 +248,7 @@
 
 
                     <p class=" text-black"
-                    >Get Unsuccessful Login</p>
+                    >Unsuccessful Login</p>
                 </div>
 
             </mat-card>
@@ -276,7 +276,7 @@
 
 
                     <p class=" text-black"
-                    >Mark On CA Report</p>
+                    >Markup On CA Report</p>
                 </div></mat-card>
         </div>
 
@@ -336,7 +336,7 @@
 
 
                     <p class=" text-black"
-                    >Get Customer Legal Heirs</p>
+                    >Customer Legal Heirs</p>
                 </div>
 
             </mat-card>
