--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -52,7 +52,7 @@
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <img src="../../../../assets/images/ic_due_payments.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class=" text-black">Due Payments/Installments</p>
+                    <p class=" text-black">Due Payment Installments</p>
                 </div>
             </mat-card>
         </div>
