--- a/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
+++ b/src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component.html
@@ -117,15 +117,15 @@
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Dob">
-                    <mat-header-cell *matHeaderCellDef
-                    >Date of Birth
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.DOB
-                        }}</mat-cell>
-                </ng-container>
+<!--                <ng-container matColumnDef="Dob">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Date of Birth-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.DOB-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
 
                 <ng-container matColumnDef="Ndd">
                     <mat-header-cell *matHeaderCellDef
