--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -79,7 +79,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_loan_defaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
 
-                    <p class=" text-black">Defaulters For RePayment (SAM & NPL)</p>
+                    <p class=" text-black">Defaulters For Repayment (SAM & NPL)</p>
                 </div>
             </mat-card>
         </div>
