--- a/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
+++ b/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
@@ -11,7 +11,7 @@
 >
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Defaulters For Recovery Re-Payment (SAM & NPL)</div>
+            <div class="heading">Defaulters For Repayment (SAM & NPL)</div>
         </div>
     </div>
 
