minor change save orr & DBR

--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -145,7 +145,7 @@
                         <button type="button" *ngIf="!isReadOnly" (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button
                                 color="primary">
                             <mat-icon class="mr-2">save</mat-icon>
-                            Save
+                            Save & Submit
                         </button>
                         <button *ngIf="!isReadOnly" type="button"
                                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
