--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -300,7 +300,7 @@
         <div class="col-lg-12 kt-margin-bottom-20-mobile">
             <button class="bg-green" mat-raised-button color="primary" (click)="SaveOrSubmit()" [disabled]="submitted">
                 <mat-icon class="mr-2">save</mat-icon>
-                {{showFinalOrrTable ? "Save & Next" : "Save"}}</button>
+                {{showFinalOrrTable ? "Apply ORR & Next" : "Save"}}</button>
 <!--            *ngIf="submitArray?.length>0"-->
             <button  mat-raised-button color="primary" class="ml-2" (click)="togglePage()"
                     [disabled]="submitted">
