--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -85,7 +85,7 @@
     <!--                                           (input)="onInputChanged($event.target.value, rowIndex, key)"-->
     <!--                                    />-->
     <!--                                </div>-->
-                                    <div><strong>{{row[key]}}</strong></div>
+                                    <div><strong class="text-md">{{row[key]}}</strong></div>
                                 </div>
                                 <div *ngIf="key!='Name'">
                                     <div class="mat-form-field-fluid w-full" appearance="outline"
