--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -67,8 +67,7 @@
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
 
-                <p class=" text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
-                Charge-off loans for recovery persuasion.</p>
+                <p class=" text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs</p>
             </div></mat-card>
         </div>
 
