--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -1,10 +1,7 @@
 <div [formGroup]="DBRForm"
-    class=" pt-3 px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    class=" flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="heading">Calculate DBR</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-2 px-6 md:px-8">
-
-    </div>
 
     <!-- Main -->
     <div class="flex flex-auto overflow-y-scroll" >
@@ -12,7 +9,7 @@
         <!-- Products list -->
         <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
             <div class="flex flex-col flex-auto sm:mb-6 overflow-x-hidden sm:overflow-y-auto">
-                <div class="form-group kt-form__group row" *ngIf="ApplicationHeader">
+                <div class="form-group kt-form__group row" *ngIf="ApplicationHeader && !checkk">
                     <div class="col-lg-12">
                         <!--            <h3 class="heading">sam</h3>-->
                         <div class="table-responsive">
@@ -145,9 +142,9 @@
                         <button type="button" *ngIf="!isReadOnly" (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button
                                 color="primary">
                             <mat-icon class="mr-2">save</mat-icon>
-                            Save & Submit
+                            Save & Submit DBR
                         </button>
-                        <button *ngIf="!isReadOnly" type="button"
+                        <button *ngIf="!isReadOnly && !checkk" type="button"
                                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
                                 mat-raised-button color="danger">
                             <mat-icon class="mr-2">cancel</mat-icon>
