--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -1,12 +1,12 @@
 <div
-    class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    class="px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Applying ORR</div>
     <!-- Header -->
     <div class="form-group kt-form__group row" *ngIf="dataFetched && ApplicationHeader">
         <div class="col-lg-12">
             <!--            <h3 class="heading">sam</h3>-->
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped mb-0">
                     <thead>
                     <tr class="table-header-background">
                         <th>Branch</th>
@@ -278,23 +278,41 @@
                         </div>
                     </div>
                     <div class="form-group kt-form__group row">
-                        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mt-2">
+                        <div class="col-lg-12 col-sm-12 kt-margin-bottom-20-mobile mt-2">
 
 
-                            <mat-checkbox class="example-margin" [checked]="Orrapplied"
+                            <mat-checkbox class="example-margin pb-2" [checked]="Orrapplied"
                                           (change)="Orrapplied = !Orrapplied">
                                 ORR Applied
                             </mat-checkbox>
+
+                            <div   class="row" >
+                                <div class="col-lg-12">
+
+                                    <kt-calculate-dbr [checkk]="'1'"></kt-calculate-dbr>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
                         </div>
                     </div>
+
+
+
+
                 </div>
 
 
             </div>
 
+
         </div>
 
 
+    </div>
+    <div *ngIf="showFinalOrrTable" class="secondPage row">
+        <div class="col-lg-12 col-sm-12">
+        </div>
     </div>
     <div class="form-group kt-form__group mb-2 row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile">
@@ -311,7 +329,6 @@
         </div>
     </div>
 </div>
-
 
 
 
