--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -33,7 +33,7 @@
                         <div class="col-lg-12">
                             <div class="flex" style="flex-wrap: wrap;">
                                 <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="true"
-                                                        [is_required_circle]="true"
+                                                        [is_required_circle]="false"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
 
