--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.html
@@ -77,7 +77,7 @@
             <!--[style.height]="gridHeight"-->
             <mat-table
                 class="lmat-elevation-z8 overflow-scroll"
-                [style.height]="gridHeight"
+
                 #table
                 [dataSource]="
                     dataSource
@@ -87,6 +87,7 @@
                 matSortActive="id"
                 matSortDirection="asc"
                 matSortDisableClear
+                id="map_canvas"
             >
                 <ng-container matColumnDef="GL">
                     <mat-header-cell *matHeaderCellDef
@@ -203,9 +204,13 @@
 
                 <ng-container matColumnDef="Address">
                     <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
-                    <mat-cell *matCellDef="let report">{{
+                    <mat-cell *matCellDef="let report">
+                        <div style="width:200px; word-wrap: break-word;text-overflow: ellipsis; white-space: pre-wrap;">
+                        {{
                         report.PermanetAddress
-                        }}</mat-cell>
+                        }}
+                    </div>
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Agps">
