--- a/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.scss
+++ b/src/app/modules/reports/fa-view-circle-wise/fa-view-circle-wise.component.scss
@@ -1,1 +1,5 @@
 @import "src/app/modules/reports/updated-list-of-defaulters/updated-list-of-defaulters.component";
+#map_canvas {
+    height: calc(100vh - 270px);
+    overflow: auto;
+}
